# server-selector

./: CMakeLists.txt  vpnselector.kdev4
include/: Country.hpp  HttpWrapper.h  NordVPNConnector.hpp
src/: Country.cpp  main.cpp
